# prober

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.agent  Dockerfile.dashboard  README.md  docker-compose.yaml
.claude/: setting.json
.github/workflows/: docker.yml
config/: dashboard.toml.example
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: handlers.rs  main.rs
crates/dashboard/src/core/: auth.rs  config.rs  db.rs  mod.rs  models.rs  runtime.rs  state.rs  store.rs
crates/dashboard/static/: app.js  index.html  styles.css
