[workspace]
members = [
  "crates/dashboard",
  "crates/agent",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
thiserror = "2.0"
toml = "0.9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
tokio-stream = "0.1"
async-stream = "0.3"
