[package]
name = "dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
